# react-native-potato-crypto

./: .gitignore  .gitmodules  PotatoCrypto.podspec  README.md  RNRnBip39.podspec  index.js  package-lock.json  package.json  react-native-potato-crypto.podspec
android/: README.md  build.gradle
android/gradle/wrapper/: gradle-wrapper.properties
android/src/main/: AndroidManifest.xml
android/src/main/cpp/: CMakeLists.txt  native-lib.cpp  native-lib.h
android/src/main/java/com/potato/bip39/: MnemonicResult.java  RNRnBip39Module.java  RNRnBip39Package.java
android/src/main/java/com/potato/crypto/: MnemonicResult.java  PotatoCryptoModule.java  PotatoCryptoPackage.java
android/src/main/java/com/reactlibrary/: MnemonicResult.java  PotatoCryptoModule.java  PotatoCryptoPackage.java
bip39/crypto/: hmac_sha256.h
bip39/minter/: Bip39Mnemonic.cpp  Bip39Mnemonic.h
example/: App.js  package.json
example/android/: settings.gradle
example/android/app/: build.gradle
example/android/app/src/main/java/com/example/: MainApplication.java
example/ios/example.xcodeproj/: project.pbxproj
ios/: PotatoCrypto.h  PotatoCrypto.mm  RNRnBip39.h  RNRnBip39.m  RNRnBip39.mm
ios/PotatoCrypto.xcodeproj/: project.pbxproj
ios/PotatoCrypto.xcworkspace/: contents.xcworkspacedata
ios/RNRnBip39.xcodeproj/: project.pbxproj
ios/RNRnBip39.xcworkspace/: contents.xcworkspacedata
